--- a/env_jcopml.yml
+++ b/env_jcopml.yml
@@ -1,4 +1,4 @@
-name: jcopml
+name: jcopml_online
 
 channels:
 - anaconda 
@@ -10,7 +10,6 @@ dependencies:
 - nb_conda_kernels==2.2.0
 - pip==19.3.1
 - ipython==7.1.1
-- tqdm==4.41.1
 # Data Science
 - numpy==1.18.1
 - scipy==1.3.1
@@ -22,13 +21,8 @@ dependencies:
 - seaborn==0.9.0
 - pydotplus==2.0.2
 - ipywidgets==7.4.2
-- pillow==5.4.1
-# NLP
-- nltk==3.4.1
 
 - pip:
   # Machine Learning
-  - xgboost==0.80
-  - scikit-optimize==0.5.2
-  - jcopml==1.1.4
+  - jcopml==1.1.5
   - luwiji==1.1.0
