--- a/env_jcopml.yml
+++ b/env_jcopml.yml
@@ -1,8 +1,8 @@
-name: jcopml_online
+name: jcopml
 
 channels:
-- anaconda 
 - conda-forge
+- anaconda 
 
 dependencies:
 # Essential
@@ -10,6 +10,7 @@ dependencies:
 - nb_conda_kernels==2.2.0
 - pip==19.3.1
 - ipython==7.1.1
+- tqdm==4.41.1
 # Data Science
 - numpy==1.18.1
 - scipy==1.3.1
@@ -19,10 +20,14 @@ dependencies:
 # Visualization
 - matplotlib==3.1.2
 - seaborn==0.9.0
-- pydotplus==2.0.2
 - ipywidgets==7.4.2
+- pillow==5.4.1
+# NLP
+- nltk==3.4.1
 
 - pip:
   # Machine Learning
-  - jcopml==1.1.5
-  - luwiji==1.1.0
+  - xgboost==0.80
+  - scikit-optimize==0.7.4
+  - jcopml==1.1.7
+  - luwiji==1.1.1
